[tool.poetry]
name = "bookshop"
version = "0.1.0"
description = ""
authors = ["Nikita Shugaley <shugaley.nk@ispras.ru>"]
readme = "README.md"
packages = [{include = "shop"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"
pylint = "^2.15.10"
flake8 = "^6.0.0"
mccabe = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
